<resources>
    <string name="app_name">Novel Speed Writing</string>
    <string name="app_title">Novel Speed Writing \n Application</string>
    <string name="about_title">About Page</string>
    <string name="the_idea">The Idea</string>
    <string name="description_page">Description Page</string>
    <string name="page_summary">Page Summary</string>
    <string name="page_summary_questions">Who? What? Where? Why? When? How?</string>
    <string name="page_summary_setup">Todd is a knight, a warrior of great skill and prowess, that lives in the kingdom
        of Kael. Todd became a knight
        after he accidentally rescued the prince with an unknown power that resided in him. The prince decided to make
        him a knight as a reward and Todd has since fought alongside the prince as a bodyguard. With his unknown power,
        Todd is the first and only magical knight in the land of Kael. Seeing the kingdom of Kael as a weak kingdom rich
        with untapped spoils the demon, Yiel, sees his opportunity to make his slave empire. As the only one who can
        wield both sword and magic, it is up to Todd to fight Yiel.
    </string>
    <string name="page_summary_q1">Who is the kingdom of Kael?</string>
    <string name="page_summary_q1_answer">The kingdom of Kael is a small kingdom that has always had nice relationships
        with its people and its neighbors.
        Since Kael always helped out its neighbors and never tried to start any wars, the neighboring kingdoms left it
        alone. As a peaceful nation, the kingdom focused on intelligence and skill rather than brute force. This was
        something the other nations lacked and relied on Kael to supply.
    </string>
    <string name="page_summary_q2">What is the kingdom of Kael like for Todd?</string>
    <string name="page_summary_q2_answer">Todd was a servant for a good portion of his life, but he was well educated
        due to the fact that he lived in the
        kingdom of Kael.
    </string>
    <string name="page_summary_q3">Where is the Kingdom of Kael?</string>
    <string name="page_summary_q3_answer">As a harbor, the kingdom of Kael sat along the coastline surrounded by
        neighboring kingdoms that shared a
        continuous alliance with the kingdom of Kael.
    </string>
    <string name="page_summary_q4">Why does Todd live in the Kingdom of Kael?</string>
    <string name="page_summary_q4_answer">Todd was born into a servant family that had long lived as the royal servants
        of the household.
    </string>
    <string name="page_summary_q5">Who is the prince?</string>
    <string name="page_summary_q5_answer">Prince Lux was the youngest son in a line of five princes. While he is the
        last of the sons, he is often doted
        on as he is less brutish than his older brothers. As he passed his exams with flying colors, he was in line to
        be the next king as the kingdom of Kael had always decided their king based on academic aptitude rather than
        pure bloodlines.
    </string>
    <string name="page_summary_q6">Where was the prince rescued?</string>
    <string name="page_summary_q6_answer">The prince was attempting to use a flying machine that he had tested on a
        smaller scale before, but one of his
        brothers had broken the angle of one of the wings. When the prince attempted to fly off the roof, he quickly
        found himself plummeting to the castle ground.
    </string>
    <string name="page_summary_q7">Why was it Todd that rescued the prince?</string>
    <string name="page_summary_q7_answer">Todd had been cleaning the stables when he saw the prince falling to his
        death. Todd panicked at the sight and,
        without realizing it, teleported underneath the prince to change the direction of his fall so that the prince
        skidded over the ground.
    </string>
    <string name="page_summary_q8">What is Todd\'s relationship with the prince?</string>
    <string name="page_summary_q8_answer">Before that, the prince and Todd had never crossed paths since the servants
        were never allowed to be in the same
        areas as the royal family.
    </string>
    <string name="page_summary_q9">Why is his relationship like that?</string>
    <string name="page_summary_q9_answer">The separation allowed the royal family to function as a normal family without
        becoming corrupt by seeing their
        power over people. As a normal family should, they still prepared their own meals, clothing, and everything else
        a family normally did. The servants were there to take care of the castle.
    </string>
    <string name="page_summary_q10">Why does the prince choose to make Todd a bodyguard?</string>
    <string name="page_summary_q10_answer">The only reward that Todd could be given as a servant was a promotion to a
        better paying position. Lux chose a
        bodyguard due to the fact that Lux wanted to repay Todd in other ways, such as teaching him battle tactics, with
        the hopes that the two of them would benefit from each other.
    </string>
    <string name="page_summary_q11">What does his unknown power do?</string>
    <string name="page_summary_q11_answer">Todd\'s unknown power is that he can infinitely teleport wherever he wants to
        and in whatever position he wants
        to be teleported into.
    </string>
    <string name="page_summary_q12">Why does his unknown power make Todd the only magical knight?</string>
    <string name="page_summary_q12_answer">The power does not cause him to lose any energy, which is why mages could not
        become knights as the two
        professions used up too much energy by themselves for one person to be able to do both.
    </string>
    <string name="page_summary_q13">Why does Yiel see the kingdom as weak?</string>
    <string name="page_summary_q13_answer">Since the kingdom is primarily made up mages, there is no brute force that
        could challenge Yiel\'s army if he
        nullified their magic.
    </string>
    <string name="page_summary_q14">What does Yiel consider untapped spoils?</string>
    <string name="page_summary_q14_answer">The kingdom of Kael is primarily made up of weak men and women, which were
        perfect for unresisted slave labor.
    </string>
    <string name="page_summary_q15">Why does Yiel want a slave empire?</string>
    <string name="page_summary_q15_answer">Yiel\'s ultimate goal is to conquer the entire world so that he can live off
        their souls forever.
    </string>
    <string name="page_summary_q16">Why is Todd the only one who can fight Yiel?</string>
    <string name="page_summary_q16_answer">Since Todd\'s magic cannot be nullified and it does not have a cost, Yiel
        cannot stop or catch Todd.
    </string>
    <string name="page_summary_q_end">Now that we have answered the questions, we can put our answers into the
        description appropriately to get our
    </string>
    <string name="page_summary_result_title">Page Summary.</string>
    <string name="page_summary_result">Todd is a knight, a warrior of great skill and prowess, that lives in the kingdom
        of Kael. The kingdom of Kael
        is a small kingdom that has always had nice relationships with its people and its neighbors. Since Kael always
        helped out its neighbors and never tried to start any wars, the neighboring kingdoms left it alone. As a
        peaceful nation, the kingdom focused on intelligence and skill rather than brute force. This was something the
        other nations lacked and relied on Kael to supply. Todd was a servant for a good portion of his life, but he was
        well educated due to the fact that he lived in the kingdom of Kael. As a harbor, the kingdom of Kael sat along
        the coastline surrounded by neighboring kingdoms that shared a continuous alliance with the kingdom of Kael.
        Todd was born into a servant family that had long lived as the royal servants of the household. Todd became a
        knight after he accidentally rescued the prince with an unknown power that resided in him. Prince Lux was the
        youngest son in a line of five princes. While he is the last of the sons, he is often doted on as he is less
        brutish than his older brothers. As he passed his exams with flying colors, he was in line to be the next king
        as the kingdom of Kael had always decided their king based on academic aptitude rather than pure bloodlines. The
        prince was attempting to use a flying machine that he had tested on a smaller scale before, but one of his
        brothers had broken the angle of one of the wings. When the prince attempted to fly off the roof, he quickly
        found himself plummeting to the castle ground. Todd had been cleaning the stables when he saw the prince falling
        to his death. Todd panicked at the sight and, without realizing it, teleported underneath the prince to change
        the direction of his fall so that the prince skidded over the ground. Before that, the prince and Todd had never
        crossed paths since the servants were never allowed to be in the same areas as the royal family. The separation
        allowed the royal family to function as a normal family without becoming corrupt by seeing their power over
        people. As a normal family should, they still prepared their own meals, clothing, and everything else a family
        normally did. The servants were there to take care of the castle. The prince decided to make him a knight as a
        reward and Todd has since fought alongside the prince as a bodyguard. The only reward that Todd could be given
        as a servant was a promotion to a better paying position. Lux chose a bodyguard due to the fact that Lux wanted
        to repay Todd in other ways, such as teaching him battle tactics, with the hopes that the two of them would
        benefit from each other. With his unknown power, Todd is the first and only magical knight in the land of Kael.
        Todd\'s unknown power is that he can infinitely teleport wherever he wants to and in whatever position he wants
        to be teleported into. The power does not cause him to lose any energy, which is why mages could not become
        knights as the two professions used up too much energy by themselves for one person to be able to do both.
        Seeing the kingdom of Kael as a weak kingdom rich with untapped spoils the demon, Yiel, sees his opportunity to
        make his slave empire. Since the kingdom is primarily made up mages, there is no brute force that could
        challenge Yiel\'s army if he nullified their magic. The kingdom of Kael is primarily made up of weak men and
        women, which were perfect for unresisted slave labor. Yiel\'s ultimate goal is to conquer the entire world so
        that he can live off their souls forever. Since Todd\'s magic cannot be nullified and it does not have a cost,
        Yiel cannot stop or catch Todd. As the only one who can wield both sword and magic, it is up to Todd to fight
        Yiel.
    </string>
    <string name="chapter_summaries">Chapter Summaries</string>
    <string name="word_count">Word Count</string>
    <string name="tutorial_title">Tutorials</string>
</resources>