<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/paper"
        tools:context="tommymertell.novelspeedwriting.PageSummaryActivity">
    <TextView
            android:text="@string/page_summary"
            android:background="@drawable/book"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="30sp"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="50dp"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        >

            <TextView
                    android:text="@string/page_summary_setup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textStyle="italic"/>
            <TextView
                    android:text="@string/page_summary_q1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_q1_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/page_summary_q2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_q2_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/page_summary_q3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_q3_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/page_summary_q4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_q4_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/page_summary_q5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_q5_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/page_summary_q6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_q6_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/page_summary_q7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_q7_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/page_summary_q8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_q8_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/page_summary_q9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_q9_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/page_summary_q10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_q10_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/page_summary_q11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_q11_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/page_summary_q12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_q12_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/page_summary_q13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_q13_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/page_summary_q14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_q14_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/page_summary_q15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_q15_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/page_summary_q16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_q16_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="16sp"/>
            <TextView
                    android:text="@string/page_summary_q_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_result_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"/>
            <TextView
                    android:text="@string/page_summary_result"
                    android:textStyle="italic"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
