<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="tommymertell.novelspeedwriting.LandingPage"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
>
    <TextView
            android:text="@string/app_title"
            android:textSize="28sp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
    />
    <TextView
            android:text="@string/about_title"
            android:id="@+id/about_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
    />
    <TextView
            android:text="@string/the_idea"
            android:id="@+id/the_idea"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
    />
    <TextView
            android:text="@string/description_page"
            android:id="@+id/description_page"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
    />
    <TextView
            android:text="@string/page_summary"
            android:id="@+id/page_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
    />
    <TextView
            android:text="@string/chapter_summaries"
            android:id="@+id/chapter_summaries"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
    />
</LinearLayout>