<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="tommymertell.novelspeedwriting.TutorialsActivity" android:baselineAligned="false">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/book"
            android:orientation="horizontal"
    >
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:id="@+id/tools_back"
                android:src="@drawable/back"
        />
        <TextView
                android:text="@string/tutorial_title"
                android:textSize="28sp"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
        />
    </LinearLayout>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
        >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

            >
                <TextView
                        android:text="@string/about_title"
                        android:background="@drawable/book"
                        android:textColor="@android:color/white"
                        android:id="@+id/about_title"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                <TextView
                        android:text="@string/the_idea"
                        android:background="@drawable/book"
                        android:textColor="@android:color/white"
                        android:id="@+id/the_idea"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                <TextView
                        android:text="@string/description_page"
                        android:background="@drawable/book"
                        android:textColor="@android:color/white"
                        android:id="@+id/description_page"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                <TextView
                        android:text="@string/page_summary"
                        android:background="@drawable/book"
                        android:textColor="@android:color/white"
                        android:id="@+id/page_summary"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
                <TextView
                        android:text="@string/chapter_summaries"
                        android:background="@drawable/book"
                        android:textColor="@android:color/white"
                        android:id="@+id/chapter_summaries"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>

                <TextView
                        android:text="@string/word_count"
                        android:background="@drawable/book"
                        android:textColor="@android:color/white"
                        android:id="@+id/word_count"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="20sp"/>
            </LinearLayout>

        </ScrollView>

        <fragment android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:name="tommymertell.novelspeedwriting.AdFragment"
                  android:id="@+id/fragment"
                  tools:layout="@layout/ad_fragment"/>
</LinearLayout>
